# Zenic-Assistent

./: .dockerignore  .env.example  .gitignore  .ssh-config.md  Dockerfile  README-1.md  README.md  buildozer.spec  conftest.py  docker-compose.yml  main.py  main_conversational.py  main_headless.py  pyproject.toml  pyrightconfig.json  requirements.txt
gateway/rust-engine/: Cargo.toml
gateway/rust-engine/src/: features.rs  helpers.rs  lib.rs  pricing.rs  saga.rs  saga_exports.rs  subscription.rs  types.rs
gateway/rust-engine/src/lib_parts/: _saga_exports.rs  _type_exports.rs  mod.rs
gateway/rust-engine/src/saga/: definitions_core.rs  definitions_extended.rs  execution.rs  exports.rs  mod.rs  pricing.rs  types.rs
native/: Cargo.toml
native/src/: bus.rs  certifier.rs  completer.rs  crypto.rs  db.rs  extractor.rs  forensic.rs  hash.rs  ingest.rs  lib.rs  niche.rs  risk.rs  rollback.rs  safety_gate.rs  safety_gate_extended.rs  simulation.rs
zenic-v2/: Cargo.toml  rust-toolchain.toml
zenic-v2/.cargo/: config.toml
zenic-v2/zenic-bench/: Cargo.toml
zenic-v2/zenic-bench/benches/: memory_cache.rs  ontology_base.rs  semantic_graph.rs
zenic-v2/zenic-bench/src/: lib.rs
zenic-v2/zenic-core/: Cargo.toml
zenic-v2/zenic-core/src/: config.rs  errors.rs  lib.rs  orchestrator.rs  router.rs  session.rs  step_bridge.rs
zenic-v2/zenic-core/src/orchestrator/: coordinator.rs  lifecycle.rs  mod.rs  operations.rs  orchestrator_struct.rs  tests.rs  types.rs
zenic-v2/zenic-ffi/: Cargo.toml
zenic-v2/zenic-ffi/src/: lib.rs
zenic-v2/zenic-flow/: Cargo.toml
zenic-v2/zenic-flow/src/: checkpoint.rs  compensation.rs  engine.rs  errors.rs  lib.rs  retry.rs  status.rs  step.rs
zenic-v2/zenic-flow/src/engine/: definition.rs  executor.rs  instance.rs  mod.rs  store.rs  tests.rs  workflow_engine.rs
zenic-v2/zenic-graph/: Cargo.toml
zenic-v2/zenic-graph/src/: catalog.rs  descriptor.rs  errors.rs  graph.rs  lib.rs  subgraph.rs  supernode.rs
zenic-v2/zenic-graph/src/catalog/: mod.rs  node_ops.rs  struct_def.rs  supernode_subgraph_ops.rs  tests.rs
zenic-v2/zenic-memory/: Cargo.toml
zenic-v2/zenic-memory/src/: cache.rs  dag_adapter.rs  errors.rs  graph.rs  hitl_bridge.rs  hypothesis.rs  intent_routing.rs  lib.rs  lifecycle.rs  merkle_seal.rs  ontology.rs  policy_refinement.rs  schema_drift.rs  subscription_gate.rs  types.rs  verdict_adapter.rs  yaml_renderer.rs
zenic-v2/zenic-memory/src/graph/: mod.rs  queries.rs  struct_and_schema.rs  types.rs
zenic-v2/zenic-memory/src/lifecycle/: manager.rs  mod.rs  orchestrator.rs  orchestrator_run.rs  persistence.rs  transitions.rs  types.rs
zenic-v2/zenic-memory/src/ontology/: builtin.rs  mod.rs  types.rs
zenic-v2/zenic-memory/src/types/: core.rs  learning.rs  lifecycle.rs  memory_types.rs  mod.rs
zenic-v2/zenic-policy/: Cargo.toml
zenic-v2/zenic-policy/src/: audit.rs  engine.rs  errors.rs  gate.rs  lib.rs  permission.rs  role.rs  rule.rs
zenic-v2/zenic-policy/src/audit/: mod.rs  tests.rs  types.rs
zenic-v2/zenic-policy/src/engine/: compiler.rs  engine_impl.rs  evaluator.rs  mod.rs  optimizer.rs  types.rs
zenic-v2/zenic-policy/src/gate/: checker.rs  config.rs  mod.rs  tests.rs  types.rs
zenic-v2/zenic-policy/src/role/: manager.rs  mod.rs  permissions.rs  registry.rs  tests.rs  types.rs
zenic-v2/zenic-policy/src/rule/: definition.rs  evaluator.rs  mod.rs  tests.rs  types.rs
zenic-v2/zenic-proto/: Cargo.toml
zenic-v2/zenic-proto/src/: domain.rs  errors.rs  ids.rs  lib.rs  node_types.rs  serde_.rs
zenic-v2/zenic-pybridge/: Cargo.toml  build.rs
zenic-v2/zenic-pybridge/src/: bus.rs  catalog.rs  certifier.rs  completer.rs  db.rs  e2e_pipeline.rs  eventbus.rs  lib.rs  license.rs  memory_chip.rs  niche.rs  safety_gate.rs  safety_gate_extended.rs  template.rs
zenic-v2/zenic-pybridge/src/bus/: mod.rs  publisher.rs  ring_buffer.rs  routing.rs  shared_state.rs  subscriber.rs  tests.rs  types.rs
zenic-v2/zenic-pybridge/src/catalog/: mod.rs
zenic-v2/zenic-pybridge/src/certifier/: api_export.rs  api_from_template.rs  api_sign_verify.rs  blueprint.rs  config.rs  helpers.rs  mod.rs  result.rs  schema_types.rs  types.rs
zenic-v2/zenic-pybridge/src/completer/: api_answers.rs  api_finalize.rs  api_session.rs  mod.rs  result_types.rs  types.rs  validation.rs
zenic-v2/zenic-pybridge/src/e2e_pipeline/: mod.rs  operations.rs  pymethods.rs  stages.rs  tests.rs  types.rs  validation.rs
zenic-v2/zenic-pybridge/src/extractor/: api.rs  apply.rs  extraction.rs  matching.rs  mod.rs  types.rs
zenic-v2/zenic-pybridge/src/forensic/: analyzer.rs  hashing.rs  merkle.rs  mod.rs  reporter.rs  tests.rs  types.rs
zenic-v2/zenic-pybridge/src/ingest/: api.rs  extractors.rs  mod.rs  types.rs
zenic-v2/zenic-pybridge/src/license/: crypto.rs  hardware.rs  kill_switch.rs  mod.rs  signing.rs  types.rs  verification.rs
zenic-v2/zenic-pybridge/src/memory_chip/: lifecycle.rs  lifecycle_ops.rs  mod.rs  operations.rs  retrieval.rs  store.rs  theorem_cache.rs  types.rs
zenic-v2/zenic-pybridge/src/niche/: api.rs  definition.rs  enums.rs  mod.rs  schema.rs
zenic-v2/zenic-pybridge/src/risk/: assessor.rs  blast_radius.rs  calculator.rs  mod.rs  propagation.rs  tests.rs  types.rs
zenic-v2/zenic-pybridge/src/rollback/: mod.rs  operations.rs  tests.rs  types.rs
zenic-v2/zenic-pybridge/src/safety_gate/: classify.rs  mod.rs  rate_limiter.rs  rules.rs  state.rs  types.rs  validate.rs
zenic-v2/zenic-pybridge/src/safety_gate_extended/: api.rs  domain_rules.rs  helpers.rs  mod.rs  (+1 more)
zenic-v2/zenic-runtime/: Cargo.toml
zenic-v2/zenic-runtime/src/: context.rs  errors.rs  executor.rs  lib.rs  loader.rs  memory.rs  result.rs  scheduler.rs
zenic-v2/zenic-safety/: Cargo.toml
zenic-v2/zenic-safety/src/: categories.rs  compliance.rs  domain_rules.rs  engine.rs  errors.rs  lib.rs  sensitivity.rs  verdict.rs
zenic-v2/zenic-subscription/: Cargo.toml
zenic-v2/zenic-subscription/src/: engine.rs  errors.rs  feature_gates.rs  lib.rs  payment.rs  pricing.rs  trial.rs  types.rs  usage.rs
zenic-v2/zenic-tests/: Cargo.toml
zenic-v2/zenic-tests/src/: lib.rs
(+2656 files in other folders)
