[project]
name = "zenic-agents"
version = "3.0.0"
description = "Zenic-Agents - Agente Asistente Autónomo con Motor de IA Quirúrgico, SNA, Blueprints Certificados y Defensa en Profundidad"
requires-python = ">=3.10"
dependencies = [
    # Database
    "aiosqlite>=0.19.0",

    # AI/ML
    "numpy>=1.24.0",

    # Configuration
    "pyyaml>=6.0",

    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
z3 = ["z3-solver>=4.12.0"]
tui = ["textual>=2.0.0"]
embeddings = ["fastembed>=0.2.0"]
llm = ["llama-cpp-python>=0.3.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0"]
all = [
    "z3-solver>=4.12.0",
    "fastembed>=0.2.0",
    "llama-cpp-python>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "asyncio: mark a test as an asyncio test",
    "integration: mark a test as an integration test",
    "e2e: mark a test as an end-to-end test",
    "slow: mark a test as slow running",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__",
    "pass",
]

[tool.maturin]
# Configuration for building the native Rust extension with maturin.
manifest-path = "zenic-v2/zenic-pybridge/Cargo.toml"
module-name = "_zenic_native"
python-source = "src"
strip = true
