[package]
name = "zenic-agents-native"
version = "1.0.0"
edition = "2021"
description = "Native Rust extensions for Zenic-Agents via PyO3"
authors = ["Zenic-Agents Team"]
license = "MIT"

[lib]
name = "_zenic_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
