[package]
name = "zenic-pricing-engine"
version = "3.0.0"
edition = "2021"
description = "Zenic-Agents v3 Compiled Pricing Engine — USDT TRC20, 5 Tiers, Feature Gates, Trial"
authors = ["Zenic-Agents Team"]
license = "proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["wasmbind"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for max optimization
strip = true             # Strip debug symbols
panic = "abort"          # Smaller binary

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
