[package]
name = "zenic-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Benchmarks for Zenic-Agents"

[dependencies]
zenic-memory = { path = "../zenic-memory" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "memory_cache"
harness = false

[[bench]]
name = "semantic_graph"
harness = false

[[bench]]
name = "ontology_base"
harness = false
