[package]
name = "zenic-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Durable workflow engine with checkpoints, SAGA, and retry for Zenic-Agents"

[dependencies]
zenic-proto = { workspace = true }
zenic-graph = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
