[package]
name = "zenic-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types, IDs, domain enums, and serialization for Zenic-Agents"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
