[package]
name = "zenic-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Execution runtime, scheduler, and memory manager for Zenic-Agents"

[dependencies]
zenic-proto = { workspace = true }
zenic-graph = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }

[dev-dependencies]
