[package]
name = "zenic-safety"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Extended safety gate with domain-specific rules, compliance validation, and sensitivity escalation for Zenic-Agents"

[dependencies]
zenic-proto = { path = "../zenic-proto" }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
regex = "1"
chrono = "0.4"

[dev-dependencies]
