[package]
name = "zenic-subscription"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Subscription engine with Saga pattern, USDT TRC20 payments, and 14-day trial for Zenic-Agents"

[dependencies]
zenic-proto = { workspace = true }
zenic-flow = { path = "../zenic-flow" }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
